--- a/ToDoFront/index.html
+++ b/ToDoFront/index.html
@@ -7,14 +7,20 @@
     <link rel="stylesheet" href="css/styleTodo.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
+<header class="header">
+    <div class="header-right">
+        <a href="index.html" class="active">To-Do</a>
+        <a href="login.html">Login In</a>
+        <a href="registration.html">Registration</a>
+    </div>
+</header>
 <body>
     <div id="todo" class="todo">
-        <h1> TO-DO </h1>
+        <h1> To-Do </h1>
         <input type="text" id="input-field" class="input-field" maxlength="12" placeholder="Add New Todo" size="25">
-        <button id="addBtn" class="add">ADD</button>
+        <button id="addBtn" class="add">Add</button>
         <ul class="todos" id="list"></ul>
         <div id="buttons">
-            <button id="savebtn" class="save">Login</button>
             <button id="clearbtn" class="clear">Clear</button>
         </div>
     </div>
