--- a/ToDoFront/login.html
+++ b/ToDoFront/login.html
@@ -23,9 +23,10 @@
         </ul>
         <div id="buttons">
             <button id="Log" class="Log">Login In</button>
-            <button id="Reg" class="Reg">Registration</button>
+            <a href="registration.html"><button id="Reg" class="Reg">Registration</button></a>
         </div>
     </div>
     <script src="scripts/log.js"></script>
+    <script src="scripts/logTest.js"></script>
 </body>
 </html>
