--- a/ToDoFront/index.html
+++ b/ToDoFront/index.html
@@ -25,5 +25,6 @@
         </div>
     </div>
     <script src="scripts/index.js"></script>
+    <script src="scripts/logTest.js"></script>
 </body>
 </html>
