--- a/ToDoFront/registration.html
+++ b/ToDoFront/registration.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>ToDo</title>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styleTodoRegistration.css">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</head>
-<header class="header">
-    <div class="header-right">
-        <a href="index.html">To-Do</a>
-        <a href="login.html">Login In</a>
-        <a href="registration.html" class="active">Registration</a>
-    </div>
-</header>
-<body>
-<div id="todo" class="todo">
-    <h1> Registration </h1>
-    <ul>
-        <input type="text" id="input-field" class="input-field" maxlength="20" placeholder="Login" size="25">
-        <input type="password" id="input-field2" class="input-field" maxlength="20" placeholder="Password" size="25">
-        <input type="password" id="input-field3" class="input-field" maxlength="20" placeholder="Confirm password" size="25">
-    </ul>
-    <div id="buttons">
-        <button id="addBtn" class="add">Registration</button>
-    </div>
-    <script src="scripts/reg.js"></script>
-</div>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>ToDo</title>
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/styleTodoRegistration.css">
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    </head>
+    <header class="header">
+        <div class="header-right">
+            <a href="index.html">To-Do</a>
+            <a href="login.html">Login In</a>
+            <a href="registration.html" class="active">Registration</a>
+        </div>
+    </header>
+    <body>
+        <div id="todo" class="todo">
+            <h1> Registration </h1>
+            <ul>
+                <input type="text" id="input-login" class="input-field" maxlength="20" placeholder="Login" size="25">
+                <input type="password" id="input-pass" class="input-field" maxlength="20" placeholder="Password" size="25">
+                <input type="password" id="input-confirm" class="input-field" maxlength="20" placeholder="Confirm password" size="25">
+            </ul>
+            <div id="buttons">
+                <button id="addBtn" class="add">Registration</button>
+            </div>
+            <script src="scripts/reg.js"></script>
+        </div>
+    </body>
 </html>
